# VirtFuzz

./: Cargo.toml  README.md  qemu-patch.patch  rust-toolchain.toml
benches/: qemu.rs
device-definitions/: README.md  bluetooth.json  hwsim-scan.json  input.json  network.json
fuzz/: Cargo.toml  run-template-workdir.sh  run-template.sh
fuzz/src/: main.rs
guestimage/: .gitignore  bluetooth.conf  bt-enable-connect.service  create-image.sh  hostapd.conf  ibss.service  permanent-scan.service  setup-syzkaller-hwsim.sh  setup-syzkaller.service
kcovreader/: Cargo.toml
kcovreader/src/: lib.rs
kernel-config/: README.md  base.config  kasan.config  kcsan.config  ubsan.config
kernel-patches/: 0001-Add-function-definitions-in-header.patch  0001-Add-kcov-ivshmem-device-driver.patch  0001-Bluetooth-virtio_bt-fix-memory-leak-in-virtbt_rx_han.patch  0001-wifi-mac80211_hwsim-check-length-for-virtio-packets.patch  0002-Add-methods-to-collect-coverage-to-IVSHMEM-on-boot.patch  0003-Add-kcov-coverage-collection-to-virtio-net.patch  0004-Instrument-virtio-bt-with-kcov_ivshmem-alt.patch  0004-Instrument-virtio-bt-with-kcov_ivshmem.patch  0005-Increase-Bluetooth-Timeouts.patch  0006-Set-KCOV_INSTRUMENT-for-net-bluetooth.patch  0007-Add-coverage-for-network-stack.patch  0008-Add-802.11-virtio-driver-and-coverage-for-Mac802.11.patch  annotate-80211.sh  annotate-bluetooth.sh  apply.sh
kernel-patches/kcov-backports/: 0001-kcov-allocate-per-CPU-memory-on-the-relevant-node.patch  0002-kcov-avoid-enable-disable-interrupts-if-in_task.patch  0003-kcov-replace-local_irq_save-with-a-local_lock_t.patch
proxy/: Cargo.toml
proxy/src/: main.rs
replay/: Cargo.toml
replay/resources/: .metadata_test.metadata  test-metadata.json
replay/src/: error.rs  main.rs  manager.rs  metadata.rs  reproducer.rs  syzcoverage.rs  utils.rs
resources/: setup.pcap
resources/test/: coverage-test-00  coverage-test-01
setup-scripts/: setup-qemu.sh
src/: coverage.rs  kcov_cmpmap.rs  lib.rs  logmonitor.rs  metadata.rs  netlink_hwsim.rs  pcap.rs  ui.rs  utils.rs
src/feedback/: backtrace.rs  const_metadata.rs  coverage_statistic.rs  executed_inputs.rs  mod.rs
src/input/: generator.rs  hwsim80211_input.rs  mod.rs  mutator.rs
src/observer/: dmesg.rs  kcov.rs  kcov_map_observer.rs  mod.rs
src/qemu/: bt_fake_cc.rs  device_config.rs  dmesg.rs  errors.rs  executor.rs  mod.rs
