[package]
name = "virtfuzz"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
simplelog = "0.12.0"
qapi = { version = "0.8.0", features = [ "qmp" ] }
libafl = { version = "0.9.0" }
rand = "^0.8.4"
uds = "^0.2.6"
qapi-qmp = "0.8.0"
shared_memory = "0.12.0"
serde = "1.0.130"
clap = { version = "3.2.1", features = ["derive", "env"] }
pcap = "1.0.0"
regex = "1.5.4"
ahash = "0.7.6"
kcovreader = {path = "kcovreader"}
serde_json = "1.0.94"
hex = { version = "0.4.3", features = ["serde"]}
tui = "0.16"
termion = "1.5"
thread_tryjoin = "0.2.1"
plotters = "0.3.1"
postcard = "0.7.3"
nix = {version = "0.25.0", features = ["sched"]}
netlink-packet-generic = "=0.3.1"
netlink-packet-utils = "0.5.1"
anyhow = "1.0.62"
byteorder = "1.4.3"
netlink-packet-core = "0.4.2"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"]}

[[bench]]
name = "qemu"
harness = false

[features]
introspection = ["libafl/introspection"]

[workspace]
members = [
    "fuzz",
    "replay",
    "proxy"
]

[profile.release]
lto = true
