[package]
name = "virtfuzz"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
simplelog = "0.12.0"
libafl = { version = "0.12.0", features = ["serdeany_autoreg"] }
libafl_bolts = "0.12.0"
rand = "^0.8.4"
uds = "0.4.2"
shared_memory = "0.12.0"
serde = "1.0.130"
clap = { version = "3.2.1", features = ["derive", "env"] }
pcap = "2.0.0"
regex = "1.10.4"
ahash = "0.8.11"
kcovreader = {path = "kcovreader"}
serde_json = "1.0.117"
hex = { version = "0.4.3", features = ["serde"]}
nix = {version = "0.28.0", features = ["sched"]}
anyhow = "1.0.83"
byteorder = "1.5.0"
netlink-packet-generic = "=0.3.1"
netlink-packet-utils = "0.5.1"
netlink-packet-core = "0.4.2"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"]}

[[bench]]
name = "qemu"
harness = false

[features]
introspection = ["libafl/introspection"]
dump-invalid-coverage = []

[workspace]
members = [
    "fuzz",
    "replay",
    "proxy"
]

[profile.release]
lto = true
