[package]
name = "virtfuzz-fuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive", "env"] }
libafl = { version = "0.9.0" }
virtfuzz = {path = ".."}
log = "0.4.17"
simplelog = "0.12.0"
rand = "0.8.5"
humantime = "2.1.0"
serde = "1.0.145"

[features]
introspection = ["libafl/introspection", "virtfuzz/introspection"]
minimizer = ["libafl/cmin"]
