[package]
name = "virtfuzz-replay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.1", features = ["derive", "env"] }
libafl = { version = "0.9.0"}
virtfuzz = {path = ".."}
log = "0.4.17"
simplelog = "0.12.0"
rand = "0.8.5"
serde = "1.0.130"
serde_json = "1.0.74"
kcovreader = {path = "../kcovreader"}
netlink-packet-generic = "0.3.1"
netlink-packet-utils = "0.5.1"
netlink-packet-core = "0.4.2"
